# ROS2_Trajectory_Logger_And_Visualizer

./: README.md
trajectory_logger/: CMakeLists.txt  README.md  package.xml
trajectory_logger/src/: trajectory_publisher.cpp  trajectory_reader.cpp
trajectory_logger/srv/: SaveTrajectory.srv
